fdo#37129: Fix the drawing of dotted and dashed borders in Calc.