drawinglayer/source/processor2d/vclprocessor2d.cxx
@@ -837,6 +837,10 @@ namespace drawinglayer
             }
             else
             {
+                // remember that we enter a PolygonStrokePrimitive2D decomposition,
+                // used for AA thick line drawing
+                mnPolygonStrokePrimitive2D++;
+
                 mpOutputDevice->DrawPolyPolygon(aLocalPolyPolygon);
 
                 if(mnPolygonStrokePrimitive2D
@@ -854,6 +858,9 @@ namespace drawinglayer
                         mpOutputDevice->DrawPolyLine(aLocalPolyPolygon.getB2DPolygon(a), 0.0);
                     }
                 }
+
+                // leave PolygonStrokePrimitive2D
+                mnPolygonStrokePrimitive2D--;
             }
         }
 
